Fix icon and title alignment

--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -21,3 +21,12 @@
   margin:4px;
   font-weight:300;
 }
+
+.container{
+  max-width:750px;
+}
+
+.icon-title{
+    display: flex;
+    align-items: center;
+}
